<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ZTE Racer Settings</string>

    <string name="screen_calibration_title_head">Screen calibration</string>
    <string name="screen_calibration_summary_head">Calibrate touchscreen</string>

    <string name="dual_touch_title_head">Dual touch</string>
    <string name="dual_touch_summary_head">Enable fake dual touch</string>

    <string name="gesture_pressure_title_head">Gesture pressure</string>
    <string name="gesture_pressure_summary_head">Pressure needed to activate gesture emulation</string>

    <string name="gesture_blindspot_title_head">Gesture blindspot</string>
    <string name="gesture_blindspot_summary_head">Blindspot between singletouch and gesture emulation</string>

    <string name="usb_charging_title_head">USB Charging</string>
    <string name="usb_charging_summary_head">Enable/Disable charging</string>
</resources>
